Fix project name again.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "obix/phpvalidation",
+  "name": "pjdevries/phpvalidation",
   "description": "PHP data validation library, based on https://github.com/devcoder-xyz/php-validator/.",
   "type": "library",
   "license": "MIT, GNU GPLv2",
